# sql-inspect

./: README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/static/css/: styles.css
app/static/js/: main.js
app/static/js/modules/: editor.js  eventHandlers.js  planVisualizer.js  queryExecutor.js  sqlParser.js  tableUtils.js  tooltipManager.js  utils.js  visualizer.js
app/static/js/modules/styles/: theme.js
app/templates/: index.html
init-scripts/: 01-init.sql
