[project]
name = "sql-inspect"
version = "0.1.0"
description = "SQL Query Visualizer and Debugger"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
]

[tool.poetry.dependencies]
python = ">=3.12"
